# umba-tr

./: .gitignore  .gitmodules  .md-pp.options  .set_msvc.bat.template  .set_sln.bat  .set_sln_exes.bat  CMakeLists.txt  _gen-doc.bat  _precommit.bat  _start_msvc.bat  _update_all.bat  deploy_local.bat  umba-tr-msvc2019.sln
.msvc/: umba_3dp_gtest.props  umba_3dp_jinja2cpp.props  umba_3dp_wtl.props  umba_common.props  umba_local_common_prjdirs.props  umba_qt_common.props  umba_target_console.props
.msvc2019/: umba-tr.vcxproj  umba_prjdefs.props  umba_prjdirs.props  umba_prjdirs_vc.props
_libs/: .gitignore  _clone_libs.bat  _git-job-impl.bat
_prj_msvc/: umba-tr.vcxproj  umba_prjdefs.props  umba_prjdirs.props  umba_prjdirs_vc.props
_prj_msvc/props/: set.txt  umba_3dp_yaml_cpp.props  umba_common.props  umba_config_matrix_qt.props  umba_local_common_prjdirs.props  umba_target_lib_static.props  umba_target_windows.props
_src/umba-tr/: app_config.h  app_ver_config.h  arg_parser.h  print_ver.h  todo.txt  umba-tr.cpp
src/umba-tr/: arg_parser.h  log.h  umba-tr.cpp
